--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,5 +21,12 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#61DAFB",
-  "background_color": "#282c34"
+  "background_color": "#282c34",
+  "gcm_sender_id": "103953800507",
+  "prefer_related_applications": false,
+  "related_applications": [],
+  "gcm_user_visible_only": true,
+  "permissions": [
+    "gcm"
+  ]
 }
